<resources>
    <string name="app_name">CoNet</string>

    <string name="kakao_app_key">ca80d7d552460493e7e06a29b6eafb06</string>
    <!-- AndroidManifest.xml에서 사용 -->
    <string name="kakao_app_key2">kakaoca80d7d552460493e7e06a29b6eafb06</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="plan_name_length">%1$d/20</string>

    <string name="user_info">회원정보</string>
    <string name="user_notice">공지사항</string>
    <string name="user_inquiry">문의하기</string>
    <string name="user_terms">이용약관</string>
    <string name="user_logout">로그아웃</string>
    <string name="conet_email">helpconet@gmail.com</string>

    <string name="group_title">모임</string>
    <string name="group_plus_content">모임추가</string>
    <string name="group_enroll_content">모임참여</string>

    <string name="invite_code_input">전달받은 초대코드를\n입력해주세요.</string>
    <string name="hint_invite_code_input">참여코드입력</string>
    <string name="group_enroll">참여하기</string>

    <string name="group_name">모임 이름</string>
    <string name="group_name_input_hint">모임이름입력</string>
    <string name="group_picture">모임대표 사진</string>
    <string name="group_picture_hint">업로드할 이미지를 첨부해주세요.\n1:1의 정방형 이미지를 추천합니다.</string>
    <string name="file_uploading">파일이 업로드 되고 있습니다.</string>
    <string name="attach">첨부</string>

    <string name="finish">완료</string>

    <string name="deail_page">상세 페이지</string>
    <string name="plan_name">약속 이름</string>
    <string name="plan_name_hint">약속이름입력</string>
    <string name="plan_date">약속 날짜</string>
    <string name="plan_time">약속 시간</string>
    <string name="plan_participant">참여자</string>
    <string name="back_button">뒤로버튼</string>
    <string name="menu_button">메뉴 버튼</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>

    <string name="invite_code_issue">초대 코드 발급</string>
    <string name="plan">약속</string>
    <string name="waiting_plan">대기중인 약속</string>
    <string name="group_delete">모임 삭제</string>
    <string name="group_out">모임 나가기</string>

    <string name="group_main_making_plan">약속 만들기</string>
    <string name="today_plan">오늘의 약속</string>

    <string name="invitecode_issue">초대코드가\n발급되었어요.</string>
    <string name="invitecode_expiration_period">초대 코드 유효 기간 :  </string>

    <string name="January">1월</string>
    <string name="February">2월</string>
    <string name="March">3월</string>
    <string name="April">4월</string>
    <string name="May">5월</string>
    <string name="June">6월</string>
    <string name="July">7월</string>
    <string name="August">8월</string>
    <string name="September">9월</string>
    <string name="October">10월</string>
    <string name="November">11월</string>
    <string name="December">12월</string>

    <string name="cancel">취소</string>


</resources>