<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".UI.Group.GroupPlusActivity">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="닫기버튼"
        android:src="@drawable/icon_close"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/pretendard_bold"
        android:textColor="@color/gray800"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:fontFamily="@font/pretendard"
        android:text="@string/finish"
        android:textColor="@color/select_enabled"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:text="@string/group_name"
        android:textColor="@color/select_focus"
        app:layout_constraintStart_toStartOf="@id/til_group_name"
        app:layout_constraintTop_toTopOf="@id/til_group_name" />

    <!--    app:counterTextColor="@color/select_focus"-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:paddingTop="24dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/textfield_stroke"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/icon_error_end_resize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tf_group_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@null"
            android:contentDescription="@string/group_name_input_hint"
            android:fontFamily="@font/pretendard"
            android:textColor="@color/texthigh"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_group_name_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/group_name_input_hint"
        android:textColor="@color/gray200"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/til_group_name"
        app:layout_constraintTop_toTopOf="@id/til_group_name" />


    <TextView
        android:id="@+id/tv_group_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/group_picture"
        app:layout_constraintStart_toStartOf="@id/iv_group_picture"
        app:layout_constraintTop_toBottomOf="@id/til_group_name" />

    <ImageView
        android:id="@+id/iv_group_picture"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@drawable/border_line"
        android:contentDescription="@string/group_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_group_picture" />

    <LinearLayout
        android:id="@+id/ll_group_plus_input_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/iv_group_picture"
        app:layout_constraintEnd_toEndOf="@id/iv_group_picture"
        app:layout_constraintStart_toStartOf="@id/iv_group_picture"
        app:layout_constraintTop_toTopOf="@id/iv_group_picture">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="모임 사진 추가"
            android:src="@drawable/icon_image_plus" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/group_picture_hint"
            android:textColor="@color/gray200" />

        <View
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <Button
            android:id="@+id/image_plus_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/gray100"
            android:text="@string/attach"
            android:textColor="@color/gray500" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_group_plus_loading_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/iv_group_picture"
        app:layout_constraintEnd_toEndOf="@id/iv_group_picture"
        app:layout_constraintStart_toStartOf="@id/iv_group_picture"
        app:layout_constraintTop_toTopOf="@id/iv_group_picture">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_uploading" />

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>