<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <ImageView
                android:id="@+id/iv_detail_fix_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/back_button"
                android:src="@drawable/icon_back"
                app:layout_constraintBottom_toBottomOf="@id/tv_detail_fix_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_detail_fix_title" />

            <TextView
                android:id="@+id/tv_detail_fix_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/deail_page"
                android:textColor="@color/gray800"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_detail_fix_menu"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/menu_button"
                android:src="@drawable/icon_menu"
                app:layout_constraintBottom_toBottomOf="@id/tv_detail_fix_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_detail_fix_title" />

            <TextView
                android:id="@+id/tv_detail_fix_plan_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:text="@string/plan_name"
                android:textColor="@color/select_focus"
                app:layout_constraintStart_toStartOf="@id/til_detail_fix_plan_name"
                app:layout_constraintTop_toTopOf="@id/til_detail_fix_plan_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_detail_fix_plan_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:clickable="false"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@color/textfield_stroke"
                app:counterTextColor="@color/select_focus"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_fix_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_detail_fix_plan_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/plan_name_hint"
                    android:enabled="false"
                    android:textColor="@color/texthigh" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_detail_fix_plan_name_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/plan_name_hint"
                android:textColor="@color/gray200"
                android:textSize="16sp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@id/til_detail_fix_plan_name"
                app:layout_constraintTop_toTopOf="@id/til_detail_fix_plan_name" />

            <TextView
                android:id="@+id/tv_detail_fix_plan_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:text="@string/plan_date"
                android:textColor="@color/select_focus"
                app:layout_constraintStart_toStartOf="@id/til_detail_fix_plan_date"
                app:layout_constraintTop_toTopOf="@id/til_detail_fix_plan_date" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_detail_fix_plan_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:clickable="false"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@color/textfield_stroke"
                app:counterTextColor="@color/select_focus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_detail_fix_plan_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_detail_fix_plan_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textColor="@color/texthigh" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_detail_fix_plan_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:text="@string/plan_time"
                android:textColor="@color/select_focus"
                app:layout_constraintStart_toStartOf="@id/til_detail_fix_plan_time"
                app:layout_constraintTop_toTopOf="@id/til_detail_fix_plan_time" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_detail_fix_plan_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:clickable="false"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@color/textfield_stroke"
                app:counterTextColor="@color/select_focus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_detail_fix_plan_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_detail_fix_plan_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textColor="@color/texthigh" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_detail_fix_plan_participants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/plan_participant"
                android:textColor="@color/select_focus"
                app:layout_constraintStart_toStartOf="@id/tv_detail_fix_plan_name"
                app:layout_constraintTop_toBottomOf="@id/til_detail_fix_plan_time" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_detail_fix_plan_participants"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="14dp"
                android:clickable="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_fix_plan_participants"
                app:spanCount="2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>