<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="18dp">

    <ImageView
        android:id="@+id/iv_dialog_group_enroll_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="닫기"
        android:src="@drawable/icon_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dialog_group_enroll_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/pretendard_bold"
        android:gravity="start"
        android:text="@string/invite_code_input"
        android:textColor="@color/texthigh"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/til_dialog_group_enroll_input_code"
        app:layout_constraintTop_toBottomOf="@id/iv_dialog_group_enroll_close" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_dialog_group_enroll_input_code"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="66dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/textfield_stroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_group_enroll_info">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tf_dialog_group_enroll_input_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/hint_invite_code_input"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_dialog_group_enroll_input_code_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_invite_code_input"
        android:textColor="@color/gray200"
        app:layout_constraintBottom_toBottomOf="@id/til_dialog_group_enroll_input_code"
        app:layout_constraintEnd_toEndOf="@id/til_dialog_group_enroll_input_code"
        app:layout_constraintStart_toStartOf="@id/til_dialog_group_enroll_input_code"
        app:layout_constraintTop_toTopOf="@id/til_dialog_group_enroll_input_code" />

    <ImageView
        android:id="@+id/iv_dialog_group_enroll_error"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginTop="6dp"
        android:contentDescription="오류"
        android:src="@drawable/icon_error_empty"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/til_dialog_group_enroll_input_code"
        app:layout_constraintTop_toBottomOf="@id/til_dialog_group_enroll_input_code" />

    <TextView
        android:id="@+id/tv_dialog_group_enroll_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="#D7260D"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/iv_dialog_group_enroll_error"
        app:layout_constraintStart_toEndOf="@id/iv_dialog_group_enroll_error"
        app:layout_constraintTop_toTopOf="@id/iv_dialog_group_enroll_error" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_dialog_group_enroll"
        android:layout_width="191dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/select_btn"
        android:enabled="false"
        android:text="@string/group_enroll"
        android:textColor="@color/grayWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_dialog_group_enroll_input_code" />


</androidx.constraintlayout.widget.ConstraintLayout>